Added navigation bar to setup pages